--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "reliqarts/doc-weaver",
-    "description": "Highly configurable, yet simple Laravel 5 documentation package. Suitable for product documentation and/or knowledge bases. Converts folder(s) of .md files into full-bread complete documentation. DocWeaver is inspired by Laravel's very own documentation mechanism.",
+    "description": "A highly configurable, yet simple Laravel 5 package documentation package.",
     "keywords": ["doc", "package", "generation", "documentation", "laravel5", "content"],
     "type": "library",
     "license": "MIT",
