Various UI Improvements - Finishes mobile sidebar implementation - Removes carbon ad styles

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "devDependencies": {
         "compass-sass-mixins": "^0.12.7",
         "cross-env": "^5.0.5",
+        "foundation-sites": "^6.4.4-rc1",
         "laravel-mix": "^1.4.5"
-    }
+    },
+    "dependencies": {}
 }
