Adds "test" npm script (alias)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "tests": "cross-env vendor/bin/phpunit"
+        "test": "cross-env vendor/bin/phpunit",
+        "tests": "npm run test"
     },
     "devDependencies": {
         "compass-sass-mixins": "^0.12.7",
