--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-doc-weaver",
+    "name": "docweaver",
     "private": true,
     "description": "Highly configurable, yet simple Laravel 5 documentation package. Suitable for product documentation and/or knowledge bases. Converts folder(s) of .md files into full-bread complete documentation.",
     "author": "Patrick Reid (@IAmReliQ)",
