--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "erusev/parsedown-extra": "^0.7.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1",
-        "symfony/browser-kit": "^3.3"
+        "symfony/browser-kit": "^3.3",
+        "symfony/yaml": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
