--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1",
         "symfony/browser-kit": "^3.3",
+        "symfony/process": "^3.3",
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
