--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
     "name": "reliqarts/docweaver",
     "description": "Highly configurable Laravel 5.x package for product documentation.",
-    "keywords": ["doc", "package", "generation", "documentation", "laravel5", "content"],
+    "keywords": [
+        "doc",
+        "package",
+        "generation",
+        "documentation",
+        "laravel5",
+        "content"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -20,11 +27,11 @@
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1",
         "symfony/browser-kit": "^3.3",
-        "symfony/process": "^3.3",
+        "symfony/process": "^3.3|~4.0",
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6",
+        "phpunit/phpunit": "^5.6|~7.0",
         "orchestra/testbench-browser-kit": "~3.1"
     },
     "autoload": {
