--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "reliqarts/docweaver",
     "description": "Highly configurable Laravel 5.x package for product documentation.",
+    "version": "v2.0.0-beta",
     "keywords": [
         "doc",
         "package",
@@ -23,12 +24,14 @@
     "require": {
         "php": ">=7.1.3",
         "illuminate/support": "5.*",
+        "erusev/parsedown": "1.7.1",
         "erusev/parsedown-extra": "^0.7.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1",
         "symfony/browser-kit": "^3.3",
         "symfony/process": "^3.3|~4.0",
-        "symfony/yaml": "^3.3"
+        "symfony/yaml": "^3.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
@@ -43,7 +46,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ReliQArts\\Docweaver\\DocweaverServiceProvider"
+                "ReliQArts\\Docweaver\\ServiceProvider"
             ],
             "aliases": {
                 "DocweaverConfig": "ReliQArts\\Docweaver\\Helpers\\Config",
