--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
 
       # run tests!
-      - run: vendor/bin/phpunit -v
+      - run: vendor/bin/phpunit --verbose
 
       # store artifacts
       - store_artifacts:
