--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
-        "orchestra/testbench-browser-kit": "~3.1"
+        "orchestra/testbench-browser-kit": "~3.1",
+        "goaop/framework":"2.2.0",
+        "codeception/aspect-mock": "^3.0"
     },
     "autoload": {
         "psr-4": {
