--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": ">=7.1.3",
         "illuminate/support": "^5.7",
         "erusev/parsedown": "1.7.1",
-        "erusev/parsedown-extra": "^0.7.1",
+        "erusev/parsedown-extra": "0.7.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1",
         "symfony/browser-kit": "^3.3",
