--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reliqarts/docweaver",
+    "name": "reliqarts/laravel-docweaver",
     "description": "Highly configurable Laravel 5.x package for product documentation.",
     "keywords": [
         "doc",
@@ -18,7 +18,8 @@
         }
     ],
     "replace": {
-        "reliqarts/doc-weaver": "1.*"
+        "reliqarts/doc-weaver": "1.*",
+        "reliqarts/docweaver": "*"
     },
     "require": {
         "php": ">=7.1.3",
@@ -35,7 +36,7 @@
     "require-dev": {
         "phpunit/phpunit": "~7.0",
         "orchestra/testbench-browser-kit": "~3.1",
-        "goaop/framework":"2.2.0",
+        "goaop/framework": "2.2.0",
         "codeception/aspect-mock": "^3.0"
     },
     "autoload": {
