--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,16 @@ php:
   - 7.2
   - 7.3
 
+env:
+  - LARAVEL='^5.7' COMPOSER_FLAGS='--prefer-stable'
+  - LARAVEL='^5.8' COMPOSER_FLAGS='--prefer-stable'
+  - LARAVEL='^6.0' COMPOSER_FLAGS='--prefer-stable'
+  - LARAVEL='6.x-dev'
+
 matrix:
   fast_finish: true
   allow_failures:
-    - php: 7.3
+    - env: LARAVEL='6.x-dev'
 
 cache:
   directories:
@@ -15,9 +21,10 @@ cache:
 
 before_install:
   - travis_retry composer self-update
+  - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}"
 
 install:
-  - travis_retry composer install --no-interaction --prefer-dist
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist --no-suggest
 
 script: ./vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
 
