--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,19 @@
     },
     "require": {
         "php": ">=7.1.3",
-        "illuminate/support": "^5.7",
+        "illuminate/support": "^5.7|^6.0",
         "erusev/parsedown": "1.7.1",
         "erusev/parsedown-extra": "0.7.1",
         "monolog/monolog": "~1.11",
-        "nesbot/carbon": "^1.22.1",
-        "symfony/browser-kit": "^3.3",
+        "nesbot/carbon": "^1.22.1|^2.0",
+        "symfony/browser-kit": "^3.3|^4.3",
         "symfony/process": "^3.3|~4.0",
         "symfony/yaml": "^3.3",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "orchestra/testbench-browser-kit": "~3.1",
+        "phpunit/phpunit": "^8.3",
+        "orchestra/testbench-browser-kit": "~3.1|^4.0",
         "goaop/framework": "2.2.0",
         "codeception/aspect-mock": "^3.0"
     },
