--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require": {
         "php": ">=7.1.3",
         "illuminate/support": "^5.7|^6.0",
-        "erusev/parsedown": "1.7.1",
-        "erusev/parsedown-extra": "0.7.1",
+        "erusev/parsedown": "^1.7.1",
+        "erusev/parsedown-extra": "^0.7.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^1.22.1|^2.0",
         "symfony/browser-kit": "^3.3|^4.3",
