--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "nesbot/carbon": "^1.22.1|^2.0",
         "symfony/browser-kit": "^3.3|^4.3",
         "symfony/process": "^3.3|~4.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "symfony/yaml": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
