--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "nesbot/carbon": "^1.22.1|^2.0",
         "symfony/browser-kit": "^3.3|^4.3",
         "symfony/process": "^3.3|~4.0",
-        "ext-json": "*",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
