--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docweaver",
   "private": true,
-  "description": "Highly configurable, yet simple Laravel 5 documentation package. Suitable for product documentation and/or knowledge bases. Converts folder(s) of .md files into full-bread complete documentation.",
+  "description": "Highly configurable, yet simple Laravel 5/6 documentation package. Suitable for product documentation and/or knowledge bases. Converts folder(s) of .md files into full-bread complete documentation.",
   "author": "Patrick Reid (@IAmReliQ)",
   "license": "ISC",
   "scripts": {
@@ -30,7 +30,6 @@
     "what-input": "^5.1.4"
   },
   "dependencies": {
-    "npm": "^6.13.4",
     "snyk": "^1.258.2"
   },
   "snyk": true
