--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
     "require": {
         "php": "^7.4",
         "illuminate/support": "^6.0",
-        "erusev/parsedown": "^1.7.1",
-        "erusev/parsedown-extra": "^0.7.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^2.0",
         "symfony/browser-kit": "^4.3",
         "symfony/process": "~4.0",
         "symfony/yaml": "^4.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "league/commonmark": "^1.1",
+        "league/commonmark-extras": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
