--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "foundation-sites": "^6.5.3",
     "jquery": "^3.3.1",
     "laravel-mix": "^4.0.14",
+    "laravel-mix-purgecss": "^4.2.0",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
+    "tailwindcss": "^1.1.4",
     "vue-template-compiler": "^2.6.8",
     "what-input": "^5.1.4"
   },
