--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,16 @@
     ],
     "require": {
         "php": "^7.4",
+        "ext-json": "*",
         "illuminate/support": "^6.0",
+        "league/commonmark": "^1.1",
+        "league/commonmark-extras": "^1.1",
         "monolog/monolog": "~1.11",
         "nesbot/carbon": "^2.0",
+        "reliqarts/laravel-common": "^5.0",
         "symfony/browser-kit": "^4.3",
         "symfony/process": "~4.0",
-        "symfony/yaml": "^4.3",
-        "ext-json": "*",
-        "league/commonmark": "^1.1",
-        "league/commonmark-extras": "^1.1"
+        "symfony/yaml": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
