--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,17 +1,14 @@
-parameters:
+grumphp:
   tasks:
-    phpcsfixer2:
-      allow_risky: ~
-      cache_file: ~
+    ecs:
       config: ~
-      rules: []
-      using_cache: ~
-      config_contains_finder: true
-      verbose: true
-      diff: false
-      triggered_by: ['php']
+      level: ~
+      whitelist_patterns: [ ]
+      triggered_by: [ 'php' ]
+      clear-cache: false
+      no-progress-bar: true
     phpunit:
       config_file: ~
       testsuite: Unit
-      group: []
+      group: [ ]
       always_execute: false
