--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,10 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "illuminate/support": "7 - 8",
-        "league/commonmark": "^1.1",
-        "league/commonmark-extras": "^1.1",
+        "league/commonmark": "^1.5",
         "monolog/monolog": "1.24 - 2",
         "nesbot/carbon": "^2.0",
         "reliqarts/laravel-common": "^5.0",
@@ -33,7 +32,7 @@
     "require-dev": {
         "orchestra/testbench-browser-kit": "4 - 6",
         "phpunit/phpunit": "^9.3",
-        "phpro/grumphp": "^0.19.1",
+        "phpro/grumphp": "^1.0",
         "phpspec/prophecy-phpunit": "^2.0",
         "symplify/easy-coding-standard": "^8.2"
     },
