--- a/grumphp.yml
+++ b/grumphp.yml
@@ -3,7 +3,8 @@ grumphp:
     ecs:
       config: ~
       level: ~
-      whitelist_patterns: [ ]
+      paths: [ ]
+      files_on_pre_commit: false
       triggered_by: [ 'php' ]
       clear-cache: false
       no-progress-bar: true
