--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "illuminate/support": "7 - 9",
-        "league/commonmark": "^1.5 || ^2.2",
+        "league/commonmark": "^2.2",
         "monolog/monolog": "1.24 - 2",
         "nesbot/carbon": "^2.0",
         "reliqarts/laravel-common": ">=5.0",
