--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -8,18 +8,9 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        laravel-version: ['^8.0', '^9.0', '^10.0']
+        laravel-version: ['^9.0', '^10.0']
         preference: ['stable']
-        php-version: ['7.4', '8.0', '8.1', '8.2']
-        exclude:
-          - laravel-version: ^8.0
-            php-version: 8.0
-          - laravel-version: ^9.0
-            php-version: 7.4
-          - laravel-version: ^10.0
-            php-version: 7.4
-          - laravel-version: ^10.0
-            php-version: 8.0
+        php-version: ['8.1', '8.2']
     name: Laravel ${{ matrix.laravel-version }} (${{ matrix.preference }}) on PHP ${{ matrix.php-version }}
     steps:
       - name: Checkout
