--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*",
-        "illuminate/support": "8 - 10",
+        "illuminate/support": "9 - 10",
         "league/commonmark": "^2.2",
         "monolog/monolog": "1.24 - 3",
         "nesbot/carbon": "^2.0",
@@ -34,7 +34,7 @@
         "phpunit/phpunit": "^9.3",
         "phpro/grumphp": "^1.0",
         "phpspec/prophecy-phpunit": "^2.0",
-        "symplify/easy-coding-standard": ">=8.2"
+        "symplify/easy-coding-standard": ">=10.2"
     },
     "autoload": {
         "psr-4": {
